# DiscordBotManager-1

./: .env.example  .env.template  .gitignore  .replit  ENHANCED_BOT_SPECIFICATION.md  ENVIRONMENT_SETUP_GUIDE.md  ENV_VARIABLES_REFERENCE.md  README.md  SETUP_GUIDE.md  check_env.py  config.py  database.json  database.py  error_handler.py  main.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt  services.py  ticket_ai_config.py  web_control.py
attached_assets/: Pasted--FULL-AI-INSTRUCTION-BLOCK-ONE-GIANT-CHUNK-Spiritual-Battlegrounds-Ticket-System-AI-Rules-You--1763934520852_1763934520852.txt  Pasted--workspace-200-git-remote-add-origin-https-github-com-RoModerate-DiscordBotManager-1-git-git-1764376910902_1764376910902.txt  Pasted-1-Command-Duplication-Performance-Fix-Fix-the-issue-where-commands-like-or-cause-duplicate-1762491872938_1762491872938.txt  Pasted-AI-Assistant-The-AI-must-be-built-in-free-to-use-and-always-active-AI-capabilities-Respond-to-1762574770631_1762574770631.txt  Pasted-BOT-REWRITE-INSTRUCTIONS-Ticket-System-Command-ticketpanel-Goal-Send-an-embed-based-ticket-p-1762563147514_1762563147514.txt  Pasted-Convert-all-commands-to-dot-commands-and-slash-commands-with-full-functionality-Commands-1762569703420_1762569703421.txt  Pasted-Counting-system-The-counting-feature-doesn-t-work-in-channel-ID-1431428103674138634-Please-fix-th-1762562570973_1762562570974.txt  Pasted-Error-type-TimeoutError-Traceback-most-recent-call-last-File-nix-store-7d088dip86hlzri9sk0-1762493886041_1762493886041.txt  (+17 more)
cogs/: afk.py  ai_chat.py  automod.py  stats.py  (+15 more)
(+11 files in other folders)
